XERCESC-2158 - Multi-byte bug in UTF8 Transcoder

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@1872119 13f79535-47bb-0310-9956-ffa450edef68